{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 39,
  "lineage": "a15925f0-bbe3-0828-4318-512f6535a9a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c907fe6138a77378",
            "arn": "arn:aws:ec2:eu-west-3:126316686161:elastic-ip/eipalloc-0c907fe6138a77378",
            "domain": "vpc",
            "id": "eipalloc-0c907fe6138a77378",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-37-175-29.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.175.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ef56f1d98722e06",
            "arn": "arn:aws:ec2:eu-west-3:126316686161:elastic-ip/eipalloc-03ef56f1d98722e06",
            "domain": "vpc",
            "id": "eipalloc-03ef56f1d98722e06",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-35-180-94-83.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.94.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "datascientest_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071600ac81869d08b",
            "arn": "arn:aws:ec2:eu-west-3:126316686161:instance/i-08ff503c4fc7aea2d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ff503c4fc7aea2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "datascientest_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d29441efa51ad74",
            "private_dns": "ip-10-1-2-85.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06829e4088ecd8182",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02eeeb8fe157ee675",
            "tags": {
              "Name": "Datascientest-a"
            },
            "tags_all": {
              "Name": "Datascientest-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063d396e6d2dbffe5"
            ]
          },
          "dependencies": [
            "aws_key_pair.myec2key",
            "aws_security_group.sg_datascientest",
            "aws_subnet.app_subnet_a",
            "aws_vpc.datascientest_vpc",
            "data.aws_ami.datascientest-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "datascientest_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071600ac81869d08b",
            "arn": "arn:aws:ec2:eu-west-3:126316686161:instance/i-0ef2dd2c41d27c8a5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef2dd2c41d27c8a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "datascientest_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d59b9c6ff69b01aa",
            "private_dns": "ip-10-1-3-200.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020207d086fb8d31d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ef5ca90d62c0fc3",
            "tags": {
              "Name": "Datascientest-b"
            },
            "tags_all": {
              "Name": "Datascientest-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063d396e6d2dbffe5"
            ]
          },
          "dependencies": [
            "aws_key_pair.myec2key",
            "aws_security_group.sg_datascientest",
            "aws_subnet.app_subnet_b",
            "aws_vpc.datascientest_vpc",
            "data.aws_ami.datascientest-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "datascientest_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071600ac81869d08b",
            "arn": "arn:aws:ec2:eu-west-3:126316686161:instance/i-0b834bd4c24d58678",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b834bd4c24d58678",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "datascientest_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0777420db99c9671e",
            "private_dns": "ip-10-1-0-190.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.190",
            "public_dns": "ec2-13-38-41-13.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.41.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033a652df3112e8c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078097896dc39cffa",
            "tags": {
              "Name": "datascientest-bastion"
            },
            "tags_all": {
              "Name": "datascientest-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1d4851af41b4419"
            ]
          },
          "dependencies": [
            "aws_key_pair.myec2key",
            "aws_security_group.sg_22",
            "aws_subnet.public_subnet_a",
            "aws_vpc.datascientest_vpc",
            "data.aws_ami.datascientest-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "datascientest_igateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:internet-gateway/igw-01339c4fdb9b4e3e3",
            "id": "igw-01339c4fdb9b4e3e3",
            "owner_id": "126316686161",
            "tags": {
              "Name": "datascientest-igateway"
            },
            "tags_all": {
              "Name": "datascientest-igateway"
            },
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_datascientest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:loadbalancer/app/datascientest-alb/cc10e777b27381f8",
            "arn_suffix": "app/datascientest-alb/cc10e777b27381f8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "datascientest-alb-1480833441.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:loadbalancer/app/datascientest-alb/cc10e777b27381f8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "datascientest-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0baa72ac66c73aaca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-078097896dc39cffa"
              },
              {
                "subnet_id": "subnet-0f8a35b8c7d970a2c"
              }
            ],
            "subnets": [
              "subnet-078097896dc39cffa",
              "subnet-0f8a35b8c7d970a2c"
            ],
            "vpc_id": "vpc-07c761014b0d028e9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.sg_application_lb",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:listener/app/datascientest-alb/cc10e777b27381f8/7ac1e105672c3142",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:targetgroup/tf-datascientest-lb-tg/7e9b0c0f33654b8b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:listener/app/datascientest-alb/cc10e777b27381f8/7ac1e105672c3142",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:loadbalancer/app/datascientest-alb/cc10e777b27381f8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb_datascientest",
            "aws_lb_target_group.datascientest_vms",
            "aws_security_group.sg_application_lb",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "datascientest_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:targetgroup/tf-datascientest-lb-tg/7e9b0c0f33654b8b",
            "arn_suffix": "targetgroup/tf-datascientest-lb-tg/7e9b0c0f33654b8b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:targetgroup/tf-datascientest-lb-tg/7e9b0c0f33654b8b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-datascientest-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "datascientesta_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:targetgroup/tf-datascientest-lb-tg/7e9b0c0f33654b8b-2024090518074955200000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:targetgroup/tf-datascientest-lb-tg/7e9b0c0f33654b8b",
            "target_id": "i-08ff503c4fc7aea2d"
          },
          "dependencies": [
            "aws_instance.datascientest_a",
            "aws_key_pair.myec2key",
            "aws_lb_target_group.datascientest_vms",
            "aws_security_group.sg_datascientest",
            "aws_subnet.app_subnet_a",
            "aws_vpc.datascientest_vpc",
            "data.aws_ami.datascientest-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "datascientestb_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:targetgroup/tf-datascientest-lb-tg/7e9b0c0f33654b8b-2024090518074944630000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:126316686161:targetgroup/tf-datascientest-lb-tg/7e9b0c0f33654b8b",
            "target_id": "i-0ef2dd2c41d27c8a5"
          },
          "dependencies": [
            "aws_instance.datascientest_b",
            "aws_key_pair.myec2key",
            "aws_lb_target_group.datascientest_vms",
            "aws_security_group.sg_datascientest",
            "aws_subnet.app_subnet_b",
            "aws_vpc.datascientest_vpc",
            "data.aws_ami.datascientest-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c907fe6138a77378",
            "association_id": "eipassoc-07181eae3eb44a8f4",
            "connectivity_type": "public",
            "id": "nat-0969a2205bf32cdd3",
            "network_interface_id": "eni-0d93bb71fc3002eae",
            "private_ip": "10.1.0.236",
            "public_ip": "13.37.175.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-078097896dc39cffa",
            "tags": {
              "Name": "datascientest-nat-public-a"
            },
            "tags_all": {
              "Name": "datascientest-nat-public-a"
            }
          },
          "dependencies": [
            "aws_eip.eip_public_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ef56f1d98722e06",
            "association_id": "eipassoc-085b71234c41a304e",
            "connectivity_type": "public",
            "id": "nat-0051193639c408cbc",
            "network_interface_id": "eni-078ede81e98924af0",
            "private_ip": "10.1.1.193",
            "public_ip": "35.180.94.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f8a35b8c7d970a2c",
            "tags": {
              "Name": "datascientest-nat-public-b"
            },
            "tags_all": {
              "Name": "datascientest-nat-public-b"
            }
          },
          "dependencies": [
            "aws_eip.eip_public_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "datascientest_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:network-acl/acl-0e17d303e3220799e",
            "egress": [],
            "id": "acl-0e17d303e3220799e",
            "ingress": [],
            "owner_id": "126316686161",
            "subnet_ids": [
              "subnet-078097896dc39cffa"
            ],
            "tags": {
              "Name": "acl-datascientest-public-a"
            },
            "tags_all": {
              "Name": "acl-datascientest-public-a"
            },
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet_a",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "datascientest_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:network-acl/acl-05929f8e5557a07b2",
            "egress": [],
            "id": "acl-05929f8e5557a07b2",
            "ingress": [],
            "owner_id": "126316686161",
            "subnet_ids": [
              "subnet-0f8a35b8c7d970a2c"
            ],
            "tags": {
              "Name": "acl-datascientest-public-b"
            },
            "tags_all": {
              "Name": "acl-datascientest-public-b"
            },
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet_b",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nat_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4085657592",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e17d303e3220799e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.datascientest_public_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nat_inbound_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2667510118",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05929f8e5557a07b2",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.datascientest_public_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_appa_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d94ba60395e60e431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0969a2205bf32cdd3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d94ba60395e60e43",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_public_a",
            "aws_nat_gateway.gw_public_a",
            "aws_route_table.rtb_appa",
            "aws_subnet.public_subnet_a",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_appb_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06add731e0e6a205f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0051193639c408cbc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06add731e0e6a205f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_public_b",
            "aws_nat_gateway.gw_public_b",
            "aws_route_table.rtb_appb",
            "aws_subnet.public_subnet_b",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01339c4fdb9b4e3e3",
            "id": "r-rtb-07798d9617423f0fd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07798d9617423f0fd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.datascientest_igateway",
            "aws_route_table.rtb_public",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_appa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:route-table/rtb-0d94ba60395e60e43",
            "id": "rtb-0d94ba60395e60e43",
            "owner_id": "126316686161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "datascientest-appa-routetable"
            },
            "tags_all": {
              "Name": "datascientest-appa-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_appb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:route-table/rtb-06add731e0e6a205f",
            "id": "rtb-06add731e0e6a205f",
            "owner_id": "126316686161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "datascientest-appb-routetable"
            },
            "tags_all": {
              "Name": "datascientest-appb-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:route-table/rtb-07798d9617423f0fd",
            "id": "rtb-07798d9617423f0fd",
            "owner_id": "126316686161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "datascientest-public-routetable"
            },
            "tags_all": {
              "Name": "datascientest-public-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_appa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0893a81610750025e",
            "route_table_id": "rtb-0d94ba60395e60e43",
            "subnet_id": "subnet-02eeeb8fe157ee675"
          },
          "dependencies": [
            "aws_route_table.rtb_appa",
            "aws_subnet.app_subnet_a",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_appb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019de4d8d3a94adc2",
            "route_table_id": "rtb-06add731e0e6a205f",
            "subnet_id": "subnet-07ef5ca90d62c0fc3"
          },
          "dependencies": [
            "aws_route_table.rtb_appb",
            "aws_subnet.app_subnet_b",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013a26d778f8a59fe",
            "route_table_id": "rtb-07798d9617423f0fd",
            "subnet_id": "subnet-078097896dc39cffa"
          },
          "dependencies": [
            "aws_route_table.rtb_public",
            "aws_subnet.public_subnet_a",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_pubb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a390c1df544e026d",
            "route_table_id": "rtb-07798d9617423f0fd",
            "subnet_id": "subnet-0f8a35b8c7d970a2c"
          },
          "dependencies": [
            "aws_route_table.rtb_public",
            "aws_subnet.public_subnet_b",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:security-group/sg-0e1d4851af41b4419",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1d4851af41b4419",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "126316686161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-22"
            },
            "tags_all": {
              "Name": "sg-22"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:security-group/sg-0baa72ac66c73aaca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0baa72ac66c73aaca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_application_lb",
            "name_prefix": "",
            "owner_id": "126316686161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Datascientest-alb"
            },
            "tags_all": {
              "Name": "Datascientest-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_datascientest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:security-group/sg-063d396e6d2dbffe5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-063d396e6d2dbffe5",
            "ingress": [],
            "name": "sg_datascientest",
            "name_prefix": "",
            "owner_id": "126316686161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-datascientest"
            },
            "tags_all": {
              "Name": "sg-datascientest"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1177456174",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-063d396e6d2dbffe5",
            "security_group_rule_id": "sgr-0fa9990d5ca370333",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_datascientest",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1270006686",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-063d396e6d2dbffe5",
            "security_group_rule_id": "sgr-0e968820acbd002eb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_datascientest",
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:subnet/subnet-02eeeb8fe157ee675",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02eeeb8fe157ee675",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126316686161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "app-a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-a"
            },
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:subnet/subnet-07ef5ca90d62c0fc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ef5ca90d62c0fc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126316686161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "app-b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-b"
            },
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:subnet/subnet-078097896dc39cffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078097896dc39cffa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126316686161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-a"
            },
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:subnet/subnet-0f8a35b8c7d970a2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8a35b8c7d970a2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126316686161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-b"
            },
            "vpc_id": "vpc-07c761014b0d028e9"
          },
          "dependencies": [
            "aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "datascientest_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:126316686161:vpc/vpc-07c761014b0d028e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d1fa391954c36e20",
            "default_route_table_id": "rtb-02d404c880f11bb57",
            "default_security_group_id": "sg-09d2aa33e7c1d3a52",
            "dhcp_options_id": "dopt-01f3a5d2b79d4f7d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c761014b0d028e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d404c880f11bb57",
            "owner_id": "126316686161",
            "tags": {
              "Name": "datascientest-vpc"
            },
            "tags_all": {
              "Name": "datascientest-vpc"
            }
          }
        }
      ]
    }
  ]
}